styles.css
body {
  margin: 0;
  font-family: 'Montserrat', sans-serif;
  font-size: 18px;
  vertical-align: center;
  color: #fff;
  background-color: rgba(0, 0, 0);
}

html {
  scroll-behavior: smooth;
}

.header {
  height: 100vh;
  background-color: rgb(5, 5, 5);
}

.page {
  min-height: 100vh;
  display: flex;
}

.page:nth-child(2n+1) {
  flex-direction: row-reverse;
}

.tile {
  flex: 1;
  background-color: rgba(0, 0, 0, 0.6);
}

.lineup {
  text-align: left;
  padding: 30px;
}

.bio {
  text-align: left;
  padding: 30px;
  letter-spacing: 1px;
  line-height: 1.5rem;
}

.artist-photo {
  background-size: auto 100%;
  background-repeat: no-repeat;
  background-position: center;
  background-color: rgb(0, 0, 0);
}

.electrostatic {
  background-image: url("images/bg01.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}

.electrostatic>.artist-photo {
  background-image: url("images/electrostatic.jpg");
}

.skind {
  background-image: url("images/bg02.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}

.skind>.artist-photo {
  background-image: url("images/skind.jpg");
}

.merra {
  background-image: url("images/bg03.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}

.merra>.artist-photo {
  background-image: url("images/merra.jpg");
}

.artist-photo {
  position: relative;
}

.mix {
  position: absolute;
  width: 100%;
  bottom: 0;
  height: 120px;
}


.solid-sign {
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-around;
}

.logo {
  width: 400px;
  height: 400px;
  background-image: url("images/solid_sign\ 1.png");
  background-size: auto 100%;
  background-repeat: no-repeat;
}

.title {
  font-size: 26px;
  font-weight: bold;
  text-align: center;
}

.title p {
  width: 100%;
}

.social {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.social-title {
  width: 400px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.ticket {
  font-weight: bold;
  width: 400px;
  height: 64px;
  text-align: center;
  vertical-align: middle;
  line-height: 50px;
  background-color: Transparent;
  background-repeat:no-repeat;
  border: 2px solid hsla(0,0%,100%,.4);
  overflow: hidden;
  outline:none;
  color: #ffffff;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 26px;
  font-weight: bold;
  transition-duration: 0.4s;
  cursor: pointer;
}

.ticket:hover {
  background-color: #ffffff;
  color: #000;
}

.social-link img {
  height: 64px;
}

@media screen and (max-width: 600px) {
  .page, .page:nth-child(2n+1) {
    min-height: 200vh;
    flex-direction: column;
  }

  .social {
    width: 100%;
    justify-content: space-around;
  }

  .tile {
    min-height: 100vh;
  }

  .logo {
    width: 300px;
    height: 300px;
  }

  .social-title, .ticket {
    width: 300px;
  }

  .social-title {
    flex-direction: column;
  }

  .social-link img {
    height: 48px;
  }

  .title {
    font-size: 28px;
  }

}

